# ragversion

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  FILE_WATCHING_IMPLEMENTATION.md  GITHUB_ACTIONS_IMPLEMENTATION.md  How_to.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v0.10.0.md  IMPLEMENTATION_SUMMARY_v0.3.0.md  LICENSE  README.md  WEB_SERVER_QUICKSTART.md  WEB_SERVER_TEST_REPORT.md  WEB_UI_ENHANCEMENTS.md  future-enhancements.md  mkdocs.yml  pyproject.toml  query_benchmark_results.json  ragversion-implementation-plan.md  ragversion.yaml.example  test_watcher_integration.py
.github/actions/ragversion-track/: README.md  action.yml
.github/workflows/: ragversion-example-basic.yml  ragversion-example-pr.yml  ragversion-example-scheduled.yml  ragversion-example-supabase.yml
docs/: 5-MINUTE-TUTORIAL.md  API_GUIDE.md  CHUNK_VERSIONING.md  FILE_WATCHING.md  GITHUB_ACTIONS.md  MIGRATION.md  NOTIFICATIONS.md  PERFORMANCE.md  QUERY_OPTIMIZATION.md  QUICK_START_GUIDE.md  SQLITE_BACKEND.md  TROUBLESHOOTING.md  changelog.md  contributing.md  getting-started.md  index.md  integrations.md  requirements.txt
docs/advanced/: architecture.md  best-practices.md  troubleshooting.md  use-cases.md
docs/api/: config.md  models.md  storage.md  tracker.md
docs/cookbook/: cost_optimization.md  huggingface_chroma.md  ollama_qdrant.md  openai_pinecone.md
docs/examples/: basic.md  cron.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: batch-processing.md  cli.md  core-concepts.md  tracking.md  versions.md  web-ui.md
docs/integrations/: custom.md  langchain.md  llamaindex.md
examples/: README.md  basic_usage.py  cron_job.py  hello_world.py  langchain_integration.py  langchain_rag_minimal.py  langchain_rag_with_tracking.py  llamaindex_integration.py  quick_start_langchain.py  quick_start_llamaindex.py
examples/api/: api_client_example.py
examples/benchmarks/: README.md  query_benchmark.py
examples/fastapi_integration/: .env.example  QUICKSTART.md  README.md  client_example.py  config.py  main.py  monitor.py  requirements.txt
examples/notifications/: README.md  discord_example.yaml  email_example.yaml  multi_provider_example.yaml  slack_example.yaml  webhook_example.yaml
ragversion/: __init__.py  cli.py  config.py  detector.py  exceptions.py  models.py  quick_start.py  tracker.py  watcher.py
ragversion/api/: __init__.py  app.py  config.py  dependencies.py  main.py  models.py
ragversion/api/routes/: documents.py  statistics.py  tracking.py  versions.py
ragversion/chunking/: __init__.py  detector.py  splitters.py
ragversion/integrations/: __init__.py  langchain.py  llamaindex.py
ragversion/integrations/langchain/: __init__.py  loader.py  quick_start.py  sync.py
ragversion/integrations/llamaindex/: __init__.py  loader.py  quick_start.py  sync.py
ragversion/notifications/: __init__.py  base.py  discord.py  email.py  manager.py  slack.py  webhook.py
ragversion/parsers/: __init__.py  base.py  docx.py  markdown.py  pdf.py  text.py
ragversion/storage/: __init__.py  base.py  sqlite.py  supabase.py
ragversion/storage/migrations/: 001_initial_schema.sql  002_chunk_versioning.sql
ragversion/testing/: __init__.py  fixtures.py  mock_storage.py
ragversion/web/: __init__.py  routes.py
ragversion/web/templates/: analytics.html  base.html  dashboard.html  diff.html  document_detail.html  documents.html  integrations.html  track.html
tests/: __init__.py  test_quick_start.py  test_tracker.py
tests/integration/: test_chunk_tracking_e2e.py  test_langchain_quick_start.py  test_llamaindex_quick_start.py
tests/unit/: test_chunking.py
(+1 files in other folders)
